--- a/iniciando-o-html-e-css/projetos/pagina-de-receitas/style.css
+++ b/iniciando-o-html-e-css/projetos/pagina-de-receitas/style.css
@@ -6,12 +6,39 @@
 
 :root {
   font-size: 62.5%;
+  font-family: "Alice", system-ui;
+  line-height: 1.5;
+  color: #573A37;
 }
 
 body {
   font-size: 1.6rem;
+
+  background-image: url(/assets/bg-image.jpg);
+  background-size: cover;
+}
+
+#page {
+  background-color: #F0E8C2;
+  width: 80rem;
+  padding: 2.4rem;
+  margin: 4.8rem auto;
+  border-radius: 2.4rem;
 }
 
 img {
   border-radius: 1.6rem;
+}
+
+h1, h2 {
+  color: #291B1A;
+}
+
+h1 {
+  font-size: 4rem;
+  line-height: 1.4;
+}
+
+h2 {
+  font-size: 2.4rem;
 }
