--- a/iniciando-o-html-e-css/projetos/pagina-de-receitas/style.css
+++ b/iniciando-o-html-e-css/projetos/pagina-de-receitas/style.css
@@ -30,15 +30,32 @@ img {
   border-radius: 1.6rem;
 }
 
+main {
+ padding: 2.4rem; 
+}
+
+section + section {
+  margin-top: 2.4rem;
+}
+
+#about p + p {
+  margin-top: 1.2rem;
+}
+
 h1, h2 {
   color: #291B1A;
+  margin-bottom: .4rem;
+  line-height: 1.5;
 }
 
 h1 {
   font-size: 4rem;
-  line-height: 1.4;
 }
 
 h2 {
   font-size: 2.4rem;
+}
+
+ul {
+  padding-left: 2.4rem;
 }
