--- a/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/global.css
+++ b/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/global.css
@@ -5,16 +5,39 @@
 }
 
 :root {
+  font-size: 62.5%;
+
   --brand-color-light: #60A5FA;
   --brand-color-dark: #1D4ED8;
   --bg-color: #0F172A;
   --stroke-color: #1E293B;
   --text-color-primary: #F1F5F9;
   --text-color-secondary: #CBD5E1;
+
+  --font-family: "Archivo", sans-serif;
+  --h1: 800 2.4rem/1.35 var(--font-family);
+  --h2: 800 1.6rem/1.4 var(--font-family);
+  --h3: 800 1.4rem/1.4 var(--font-family);
+  --text-span: 600 1.4rem/1.45 var(--font-family);
+  --text: 400 1.6rem/1.4 var(--font-family);
+  --text-sm: 400 1.4rem/1.6 var(--font-family)
 }
 
 body {
+  font: var(--text);
   color:  var(--text-color-primary);
   background-color: var(--bg-color);
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: var(--brand-color-light);
+}
+
+h1, h2, h3 {
+  font: inherit;
+}
