--- a/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/global.css
+++ b/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/global.css
@@ -41,3 +41,17 @@ a:hover {
 h1, h2, h3 {
   font: inherit;
 }
+
+.container {
+  max-width: 128rem;
+  padding-inline: 3.2rem;
+  margin-inline: auto;
+}
+
+.grid {
+  display: grid;
+}
+
+.grid-flow-col {
+  grid-auto-flow: column;
+}
