--- a/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/sections.css
+++ b/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/sections.css
@@ -21,4 +21,15 @@
       );
     }
   }
+
+  figcaption {
+    position: absolute;
+    bottom: 0;
+
+    padding: 2.4rem;
+
+    h2 {
+      margin-top: .8rem;
+    }
+  }
 }
