applying styles to the most read section of the week

--- a/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/sections.css
+++ b/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/sections.css
@@ -1,3 +1,25 @@
+section header {
+  border-top: .1rem solid var(--stroke-color);
+  padding-block: 1.2rem 2.4rem;
+  font: var(--text-span);
+
+  a {
+    justify-self: end;
+    align-items: center;
+    gap: .8rem;
+
+    span {
+      background-image: url(../assets/icons/arrow-right.svg);
+      width: 1.6rem;
+      height: 1.6rem;
+    }
+
+    &:hover span {
+      background-image: url(../assets/icons/arrow-right-hover.svg);
+    }
+  }
+}
+
 #featured {
   img {
     height: 100%;
@@ -34,6 +56,32 @@
 
     h2 {
       margin-top: .8rem;
+    }
+  }
+}
+
+#weekly {
+
+  &>div {
+    grid-template-columns: repeat(4,29.2rem);
+  }
+
+  img {
+    height: 16rem;
+  }
+
+  figure {
+    position: relative;
+
+    .content-tag {
+      position: absolute;
+      top: .8rem;
+      left: .8rem;
+    }
+
+    p {
+      margin-top: .8rem;
+      font-weight: 800;
     }
   }
 }
