--- a/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/global.css
+++ b/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/global.css
@@ -53,8 +53,17 @@ img {
 }
 
 main {
+  margin-block: 4rem;
   margin-top: 4rem;
-  gap: 8rem;
+  row-gap: 8rem;
+  column-gap: 3.2rem;
+
+  grid-template-columns: 2fr 1.4fr;
+
+  grid-template-areas: 
+  "featured featured"
+  "weekly weekly"
+  "ai aside";
 }
 
 .content-tag {
