--- a/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/sections.css
+++ b/iniciando-o-html-e-css/projetos/portal-de-noticias/styles/sections.css
@@ -21,6 +21,8 @@ section header {
 }
 
 #featured {
+  grid-area: featured;
+
   img {
     height: 100%;
     object-fit: cover;
@@ -61,6 +63,7 @@ section header {
 }
 
 #weekly {
+  grid-area: weekly;
 
   &>div {
     grid-template-columns: repeat(4,29.2rem);
@@ -83,5 +86,37 @@ section header {
       margin-top: .8rem;
       font-weight: 800;
     }
+  }
+}
+
+#ai {
+  grid-area: ai;
+
+  img {
+    width: 17.6rem;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
+
+  h3 {
+    margin-block: .8rem .4rem;
+  }
+}
+
+aside {
+  grid-area: aside;
+}
+
+#more {
+  margin-top: 3.2rem;
+
+  h3 {
+    margin-top: .8rem;
+  }
+
+  img {
+    width: 7.2rem;
+    aspect-ratio: 1/1;
+    object-fit: cover;
   }
 }
